--- a/be/templates/pdf.tex
+++ b/be/templates/pdf.tex
@@ -1,5 +1,45 @@
 \documentclass{article}
+
+\usepackage[utf8]{inputenc}
+\usepackage{tabularx}
+\usepackage{multirow}
+\usepackage{wasysym}
+\usepackage[left=0.8cm,right=0.8cm,bottom=0.4cm,top=0.4cm]{geometry}
+\usepackage{fontspec}
+\usepackage{booktabs}
+\usepackage{colortbl}
+\usepackage{graphicx}
+\usepackage[export]{adjustbox}
+\usepackage{makecell}
+\usepackage{tikz}
+\usetikzlibrary{calc}
+
+\pagenumbering{gobble}
+
 \begin{document}
-Name: {{ name }}
-Email: {{ email }}
+
+\begin{center}
+    \renewcommand{\arraystretch}{0.85}
+
+    \begin{tabularx}{\textwidth} {
+        >{\raggedright\arraybackslash}X
+        >{\raggedright\arraybackslash}X
+        }
+
+        \textbf{Name:} {{ name }} & \textbf{Email:} {{ email }} \\
+
+        \textbf{Address:} {{ address }} & \textbf{Date of Birth:} {{ dob }} \\
+
+        \textbf{UTR:} {{ utr }} & \textbf{NI:} {{ ni }} \\
+        \cmidrule(r){1-1} \cmidrule(r){2-2}
+
+        \textbf{Loss of Income:}
+        {% if loss_of_income == 'partial' %}
+          \Square Complete \CheckedBox Partial
+        {% else %}
+          \CheckedBox Complete \Square Partial
+        {% endif %}
+    \end{tabularx}
+\end{center}
+
 \end{document}
