--- a/be/templates/pdf.tex
+++ b/be/templates/pdf.tex
@@ -33,6 +33,12 @@
         \textbf{UTR:} {{ utr }} & \textbf{NI:} {{ ni }} \\
         \cmidrule(r){1-1} \cmidrule(r){2-2}
 
+        \textbf{Standard Occupation Code:} {{ standard_occupation_code }}
+
+        {% if company %}
+          \textbf{Company:} {{ company.name }} ({{ company.number }})
+        {% endif %}
+
         \textbf{Loss of Income:}
         {% if loss_of_income == 'partial' %}
           \Square Complete \CheckedBox Partial
@@ -40,6 +46,24 @@
           \CheckedBox Complete \Square Partial
         {% endif %}
     \end{tabularx}
+
+    \rule{\textwidth}{3pt}
+    \rule{0cm}{1pt}
+
+    \section*{Accounts}
+
+    {% for account in accounts %}
+      \begin{tabularx}{\textwidth} {
+          >{\raggedright\arraybackslash}X
+          >{\raggedright\arraybackslash}X
+          }
+
+      \textbf{Account Name:} {{ account.name }} & \\
+
+      \textbf{Account Number:} {{ account.number }} \textbf{Sort Code:} {{ account.sort_code }} \\
+
+      \end{tabularx}
+    {% endfor %}
 \end{center}
 
 \end{document}
