Add a placeholder image to PDF

--- a/be/templates/pdf.tex
+++ b/be/templates/pdf.tex
@@ -18,6 +18,8 @@
 
 \begin{document}
 
+\includegraphics[scale=0.18, right]{\string {{ logo_path }}}
+
 \begin{center}
     \renewcommand{\arraystretch}{0.85}
 
