--- a/be/templates/pdf.tex
+++ b/be/templates/pdf.tex
@@ -15,7 +15,7 @@
 
 \maketitle
 
-I, \textbf{Matt Schofield} of \textbf{4 Privet Drive, Surrey, F00 8AR}, do solemnly and sincerely declare that: 
+I, \textbf{\VAR{name}} of \textbf{4 Privet Drive, Surrey, F00 8AR}, do solemnly and sincerely declare that: 
 
 \vspace{12pt}
 
@@ -24,9 +24,9 @@ I, \textbf{Matt Schofield} of \textbf{4 Privet Drive, Surrey, F00 8AR}, do solem
   \item My National Insurance Number is \textbf{MS 11 22 33 AB}
   \item My Unique Tax Payer Reference is \textbf{UTR-000123456789}
   \item My usual occupation (SIC Code) is \textbf{Other retail sale of food in specialised stores (47290)}
-  \item My estimated earnings per month would have been \textbf{\textsterling 2,110}
+  \item My estimated earnings per month would have been \textbf{\textsterling \VAR{income}}
   \item I estimate my earnings for the foreseeable future to be \textbf{\textsterling 150}
-  \item I have attached below evidence of my previous income for the 12 months preceding March 1st 2020, securely retrieved by the website covidcredit.uk on \textbf{22nd March 2020}
+  \item I have attached below evidence of my previous income for the 12 months preceding March 1st 2020, securely retrieved by the website covidcredit.uk on \textbf{\VAR{today}}
   \item I wish to claim income support of 80\% of my expected lost earnings, up to \textbf{\textsterling 2,500/month} until I am able to return to work.
 \end{enumerate}
 
@@ -36,7 +36,7 @@ And I make this solemn declaration conscientiously believing the same to be true
 
 \vspace{36pt}
 
-Declared by \textbf{Matt Schofield} at \textbf{4 Privet Drive, Surrey, F00 8AR} on \textbf{22nd March 2020}
+Declared by \textbf{\VAR{name}} at \textbf{4 Privet Drive, Surrey, F00 8AR} on \textbf{\VAR{today}}
 
 \vspace{18pt}
 
@@ -45,7 +45,6 @@ Declared by \textbf{Matt Schofield} at \textbf{4 Privet Drive, Surrey, F00 8AR} 
 \pagebreak
 
 \section{Evidence}
-
 
 
 \end{document}
