Fix Evidence header

--- a/be/templates/pdf.tex
+++ b/be/templates/pdf.tex
@@ -44,9 +44,10 @@ Declared by \textbf{\VAR{name}} at \textbf{4 Privet Drive, Surrey, F00 8AR} on \
 
 \pagebreak
 
-\section{Evidence}
-
 \begin{center}
+
+\section*{Evidence}
+
 \begin{tabular}{ |c|c|c| }
 \hline
 \textbf{Date} & \textbf{Description} & \textbf{Amount} \\
