Remove latex date from title

--- a/be/templates/pdf.tex
+++ b/be/templates/pdf.tex
@@ -20,6 +20,7 @@
 \fontfamily{phv}\selectfont
 
 \author{\href{\VAR{link_self}}{\VAR{reference_code}}}
+\date{}
 \maketitle
 
 I, \textbf{\VAR{name}} of \textbf{4 Privet Drive, Surrey, F00 8AR}, do solemnly and sincerely declare that: 
