Fix section header font

--- a/be/templates/pdf.tex
+++ b/be/templates/pdf.tex
@@ -4,6 +4,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{helvet}
 \usepackage{hyperref}
+\usepackage{sectsty}
 
 \hypersetup{
   colorlinks=true,
@@ -18,6 +19,7 @@
 \begin{document}
 
 \fontfamily{phv}\selectfont
+\allsectionsfont{\fontfamily{phv}\selectfont}
 
 \author{\href{\VAR{link_self}}{\VAR{reference_code}}}
 \date{}
