Include more personal data from model

--- a/be/templates/pdf.tex
+++ b/be/templates/pdf.tex
@@ -25,17 +25,17 @@
 \date{}
 \maketitle
 
-I, \textbf{\VAR{name}} of \textbf{4 Privet Drive, Surrey, F00 8AR}, do solemnly and sincerely declare that: 
+I, \textbf{\VAR{name}} of \textbf{\VAR{address}}, do solemnly and sincerely declare that: 
 
 \vspace{12pt}
 
 \begin{enumerate}
-  \item I am a \textbf{self-employed person / sole trader} who \textbf{has lost / will lose} \textbf{all / part} of my income due to restrictions introduced by the Government to combat COVID-19
-  \item My National Insurance Number is \textbf{MS 11 22 33 AB}
-  \item My Unique Tax Payer Reference is \textbf{UTR-000123456789}
-  \item My usual occupation (SIC Code) is \textbf{Other retail sale of food in specialised stores (47290)}
+  \item I am a \textbf{\VAR{employment_type}} who \textbf{\VAR{loss_type}} my income due to restrictions introduced by the Government to combat COVID-19
+  \item My National Insurance Number is \textbf{\VAR{national_insurance}}
+  \item My Unique Tax Payer Reference is \textbf{\VAR{unique_tax_reference}}
+  \item My usual occupation is \textbf{\VAR{industry}}
   \item My estimated earnings per month would have been \textbf{\textsterling \VAR{income}}
-  \item I estimate my earnings for the foreseeable future to be \textbf{\textsterling 150}
+  \item I estimate my earnings for the foreseeable future to be \textbf{\textsterling \VAR{future_earnings}}
   \item I have attached below evidence of my previous income for the 12 months preceding March 1st 2020, securely retrieved by the website covidcredit.uk on \textbf{\VAR{today}}
   \item I wish to claim income support of 80\% of my expected lost earnings, up to \textbf{\textsterling 2,500/month} until I am able to return to work.
 \end{enumerate}
@@ -46,7 +46,7 @@ And I make this solemn declaration conscientiously believing the same to be true
 
 \vspace{36pt}
 
-Declared by \textbf{\VAR{name}} at \textbf{4 Privet Drive, Surrey, F00 8AR} on \textbf{\VAR{today}}
+Declared by \textbf{\VAR{name}} at \textbf{\VAR{address}} on \textbf{\VAR{today}}
 
 \vspace{18pt}
 
