Fix transaction column alignment

--- a/be/templates/pdf.tex
+++ b/be/templates/pdf.tex
@@ -58,7 +58,7 @@ Declared by \textbf{\VAR{name}} at \textbf{\VAR{address}} on \textbf{\VAR{today}
 
 \section*{Evidence}
 
-\begin{tabular}{ |c|c|c| }
+\begin{tabular}{ |c|l|r| }
 \hline
 \textbf{Date} & \textbf{Description} & \textbf{Amount} \\
 \hline
