Break transactions across pages if necessary

--- a/be/templates/pdf.tex
+++ b/be/templates/pdf.tex
@@ -4,6 +4,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{helvet}
 \usepackage{hyperref}
+\usepackage{longtable}
 \usepackage{sectsty}
 
 \hypersetup{
@@ -58,7 +59,7 @@ Declared by \textbf{\VAR{name}} at \textbf{\VAR{address}} on \textbf{\VAR{today}
 
 \section*{Evidence}
 
-\begin{tabular}{ |c|l|r| }
+\begin{longtable}{ |c|l|r| }
 \hline
 \textbf{Date} & \textbf{Description} & \textbf{Amount} \\
 \hline
@@ -67,7 +68,7 @@ Declared by \textbf{\VAR{name}} at \textbf{\VAR{address}} on \textbf{\VAR{today}
   \hline
 \BLOCK{endfor}
 \hline
-\end{tabular}
+\end{longtable}
 \end{center}
 
 
